Overflow issue solved & checkboxes styled

--- a/client/css/main.css
+++ b/client/css/main.css
@@ -47,7 +47,7 @@ input[type=text] {
 }
 
 .add-button, .delete-todo {
-  background-color: hsla(210, 75%, 20%, 1);
+  background-color: rgb(25, 69, 114);
   color: hsla(210, 0%, 100%, 1);
   border-style: none;
   padding: .7em 1.5em;
@@ -58,21 +58,94 @@ input[type=text] {
   padding: 0.5em; 
   
 }
+.todo-list {
+  
+}
 .list-items {
   list-style: none;
   margin: 0;
   padding: 0;
-
+  overflow: auto;
+  max-height: 25rem;
 }
 .todo-item{
   display: flex;
   justify-content: space-between;
   font-size: 1.4em;
-  align-items: baseline;
+  align-items: center;
 }
 
 .list-text {
   margin: 0.5rem 1rem;
   max-width: 20rem;
   overflow-wrap: break-word;
+}
+
+/* ------------------------------------      */
+
+.checkbox-container {
+  display: block;
+  position: relative;
+  padding-left: 35px;
+  margin-bottom: 25px;
+  cursor: pointer;
+  font-size: 22px;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+/* Hide the browser's default checkbox */
+.checkbox-container input {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 0;
+  width: 0;
+}
+
+/* Create a custom checkbox */
+.checkmark {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 25px;
+  width: 25px;
+  background-color: rgb(197, 197, 197);
+}
+
+/* On mouse-over, add a grey background color */
+.checkbox-container:hover input ~ .checkmark {
+  background-color: #ccc;
+}
+
+/* When the checkbox is checked, add a blue background */
+.checkbox-container input:checked ~ .checkmark {
+  background-color: #04079b;
+}
+
+/* Create the checkmark/indicator (hidden when not checked) */
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+/* Show the checkmark when checked */
+.checkbox-container input:checked ~ .checkmark:after {
+  display: block;
+}
+
+/* Style the checkmark/indicator */
+.checkbox-container .checkmark:after {
+  left: 9px;
+  top: 5px;
+  width: 5px;
+  height: 10px;
+  border: solid white;
+  border-width: 0 3px 3px 0;
+  -webkit-transform: rotate(45deg);
+  -ms-transform: rotate(45deg);
+  transform: rotate(45deg);
 }
